--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ProActive_OPSC7311_POE" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.ProActive_OPSC7311_POE" parent="Theme.AppCompat.NoActionBar">
+        <!-- Customize button style -->
+        <item name="android:buttonStyle">@style/CustomButtonStyle</item>
+        <!-- Customize EditText style -->
+        <item name="android:editTextStyle">@style/CustomEditTextStyle</item>
+    </style>
+
+    <!-- Custom button style -->
+    <style name="CustomButtonStyle" parent="Widget.Material3.Button">
+        <item name="android:background">@color/proactive_red</item>
+    </style>
+
+    <!-- Custom EditText style -->
+    <style name="CustomEditTextStyle" parent="Widget.Material3.TextInputEditText.FilledBox">
+        <!-- Set corner radius to create less curved edges -->
+        <item name="android:radius">2dp</item> <!-- Adjust the radius value as needed -->
+        <!-- Set hint color -->
+        <item name="android:textColorHint">#A9A9A9</item> <!-- Adjust the color value as needed -->
+    </style>
+
+    <style name="CustomTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="hintTextColor">#A9A9A9</item> <!-- Set initial hint color -->
     </style>
 </resources>
