--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ProActive_OPSC7311_POE" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.ProActive_OPSC7311_POE" parent="Theme.AppCompat.NoActionBar">
+
     </style>
 
     <style name="Theme.ProActive_OPSC7311_POE" parent="Base.Theme.ProActive_OPSC7311_POE" />
