--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".LoginScreen">
+    tools:context=".RegisterScreen">
 
     <ImageView
         android:layout_width="match_parent"
@@ -35,7 +35,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hi, Welcome Back! "
+                android:text="Hi, Nice to Meet You! "
                 android:textSize="24sp"
                 android:textColor="@android:color/white"
                 android:layout_marginBottom="8dp"/>
@@ -52,7 +52,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello again, you've been missed!"
+            android:text="Hello, its time to get proactive!"
             android:textSize="16sp"
             android:textColor="#A9A9A9"
             android:layout_marginBottom="30dp"/>
@@ -74,7 +74,7 @@
             android:padding="10dp"
             android:background="@drawable/textfield"
             android:textColor="@color/black"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -108,6 +108,40 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm Password"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_marginTop="20dp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/confrimPasswordTextLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleDrawable="@drawable/show_password"
+            app:passwordToggleTint="@color/black"
+            app:hintEnabled="false"
+            android:layout_marginTop="5dp">
+
+
+            <EditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:textColorHint="#A9A9A9"
+                android:background="@drawable/textfield"
+                android:textColor="@color/black"
+                android:padding="10dp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -121,29 +155,20 @@
                 android:text="Remember Me"
                 android:textColor="@android:color/white" />
 
-            <TextView
-                android:id="@+id/forgotPasswordTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Forgot Password?"
-                android:textColor="#FF0000"
-                android:gravity="end"/>
-
         </LinearLayout>
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnRegister"
             android:background="@drawable/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="Sign Up"
             android:textAllCaps="false"
             android:textSize="15dp"
             android:textColor="@android:color/white"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="10dp"
-            android:onClick="btnLoginClicked"/>
+            android:onClick="btnRegisterClicked"/>
 
         <LinearLayout
             android:id="@+id/signUpLayout"
@@ -158,19 +183,19 @@
                 android:id="@+id/signUpTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account? "
+                android:text="Already have an account? "
                 android:textColor="#A9A9A9" />
 
             <Button
-                android:id="@+id/btnSignUp"
+                android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign Up"
+                android:text="Login"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:background="@drawable/button_transparent"
                 android:padding="10dp"
-                android:onClick="btnSignUpClicked"/>
+                android:onClick="btnLoginClicked"/>
 
         </LinearLayout>
 
