--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/black"
-        android:alpha="0.7"/> <!-- Adjust the alpha value (0.5 in this case) to control opacity -->
+        android:alpha="0.7"/>
 
     <LinearLayout
         android:layout_width="match_parent"
