--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="Help"
+            android:text="Logout"
             android:textColor="#FFFFFF"
             android:background="@android:color/transparent"
             android:layout_alignParentTop="true" />
@@ -82,7 +82,8 @@
                     android:src="@drawable/account_icon"
                     android:background="@drawable/profile_picture_chooser"
                     android:scaleType="centerCrop"
-                    android:layout_centerInParent="true" />
+                    android:layout_centerInParent="true"
+                    android:onClick="btnChooseProfilePicture"/>
             </RelativeLayout>
 
             <View
