--- a/app/src/main/res/values/gender_options.xml
+++ b/app/src/main/res/values/gender_options.xml
@@ -3,6 +3,6 @@
     <string-array name="gender_array">
         <item>Male</item>
         <item>Female</item>
-        <item>Sigma</item>
+        <item>Other</item>
     </string-array>
 </resources>
