--- a/app/src/main/res/layout/view_workout_fragment.xml
+++ b/app/src/main/res/layout/view_workout_fragment.xml
@@ -47,13 +47,15 @@
             android:layout_marginBottom="8dp"/>
 
         <Button
+            android:id="@+id/btnStartWorkout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button"
             android:layout_gravity="center"
             android:text="Start Workout"
             android:textAllCaps="false"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="30dp"
+            android:onClick="btnStartWorkoutClicked"/>
 
         <LinearLayout
             android:layout_width="match_parent"
