--- a/app/src/main/res/layout/workout_plan_fragment.xml
+++ b/app/src/main/res/layout/workout_plan_fragment.xml
@@ -125,7 +125,8 @@
             android:text="Create Workout"
             android:textAllCaps="false"
             android:background="@drawable/button"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:onClick="btnCreateWorkoutClicked"/>
 
     </LinearLayout>
 
