--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/proactive_red" /> <!-- Background color when pressed -->
+            <solid android:color="#FF3030"/> <!-- Pressed color -->
             <corners android:radius="15dp" /> <!-- Rounded corners -->
         </shape>
     </item>
