--- a/app/src/main/res/layout/view_exercises_fragment.xml
+++ b/app/src/main/res/layout/view_exercises_fragment.xml
@@ -1,16 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.WorkOutPlanFragment">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".controllers.ViewExercisesFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="top">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,16 +31,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
-
-            <!-- Help Button -->
-            <Button
-                android:id="@+id/btnHelp"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:text="Help"
-                android:textColor="#FFFFFF"
-                android:onClick="btnHelpClicked"/>
-
         </LinearLayout>
 
         <LinearLayout
@@ -58,7 +48,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Start a new Workout Plan,"
+                android:text="Add Exercises,"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -71,60 +61,48 @@
                 android:textColor="@color/proactive_red"
                 android:textSize="24sp"
                 android:textStyle="bold" />
-
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/exerciseName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Workout Name:"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="8dp"/>
-
-        <!-- Workout Name Input -->
-        <EditText
-            android:id="@+id/editWorkoutName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/textfield"
-            android:hint="Give your workout a neat name"
-            android:padding="10dp"
-            android:textColor="@color/black"
-            android:textColorHint="#A9A9A9" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description:"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="8dp"/>
-
-        <EditText
-            android:id="@+id/editDescription"
-            android:layout_width="match_parent"
-            android:layout_height="166dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/textfield"
-            android:hint="Give your workout an interesting description of no more than 150 characters in length."
-            android:gravity="top|start"
-            android:padding="10dp"
-            android:textColor="@color/black"
-            android:textColorHint="#A9A9A9" />
+            android:text="Create a new exercise"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:layout_marginBottom="8dp"/>
 
         <Button
-            android:id="@+id/btnCreateWorkout"
+            android:id="@+id/btnStartWorkout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Create Workout"
-            android:textAllCaps="false"
             android:background="@drawable/button"
-            android:layout_marginTop="16dp"
-            android:onClick="btnCreateWorkoutClicked"/>
+            android:layout_gravity="center"
+            android:text="Start Workout"
+            android:textAllCaps="false"
+            android:layout_marginBottom="20dp" />
 
+        <!-- RecyclerView for workouts -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewExercises"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:clipToPadding="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_exercise"/>
     </LinearLayout>
 
 
