--- a/app/src/main/res/layout/view_exercise_fragment.xml
+++ b/app/src/main/res/layout/view_exercise_fragment.xml
@@ -23,7 +23,8 @@
                 android:id="@+id/btnBack"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:background="@drawable/back_button" />
+                android:background="@drawable/back_button"
+                android:onClick="btnBackClicked"/>
 
             <!-- Spacer view to push buttons to either end -->
             <View
@@ -240,7 +241,8 @@
                         android:layout_height="40dp"
                         android:background="@drawable/rounded_image"
                         android:backgroundTint="@color/white"
-                        android:padding="1dp">
+                        android:padding="1dp"
+                        android:layout_gravity="center_horizontal">
 
                         <ImageView
                             android:layout_width="match_parent"
