--- a/app/src/main/res/layout/workout_plan_fragment.xml
+++ b/app/src/main/res/layout/workout_plan_fragment.xml
@@ -70,7 +70,8 @@
                 android:layout_marginBottom="20dp"
                 android:textColor="@color/proactive_red"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="Loading..."/>
 
         </LinearLayout>
 
