--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -30,6 +30,7 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Loading..."
             android:textColor="@color/proactive_red"
             android:textSize="24sp"
             android:layout_marginBottom="20dp"/>
