--- a/app/src/main/res/layout/view_exercise_fragment.xml
+++ b/app/src/main/res/layout/view_exercise_fragment.xml
@@ -70,7 +70,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/proactive_red"
                 android:textSize="24sp"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                android:text="Loading..."/>
 
         </LinearLayout>
 
@@ -88,7 +89,9 @@
                 android:layout_gravity="center"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginBottom="20dp"
+                android:text="Loading..."
+                android:textStyle="bold"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -160,7 +163,8 @@
                             android:id="@+id/exerciseDate"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:textColor="#D3D3D3" />
+                            android:textColor="#D3D3D3"
+                            android:text="Loading..."/>
 
 
                     </LinearLayout>
@@ -263,7 +267,8 @@
                             android:id="@+id/time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="#D3D3D3" />
+                            android:textColor="#D3D3D3"
+                            android:text="loading..."/>
 
 
                     </LinearLayout>
@@ -315,7 +320,8 @@
                             android:id="@+id/categoryDescription"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:textColor="#D3D3D3" />
+                            android:textColor="#D3D3D3"
+                            android:text="Loading..."/>
 
 
                     </LinearLayout>
@@ -368,7 +374,8 @@
                         android:id="@+id/statsDescription"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:textColor="#D3D3D3" />
+                        android:textColor="#D3D3D3"
+                        android:text="Loading..."/>
 
 
                 </LinearLayout>
