--- a/app/src/main/res/layout/view_workout_fragment.xml
+++ b/app/src/main/res/layout/view_workout_fragment.xml
@@ -32,7 +32,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/proactive_red"
                 android:textSize="24sp"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginBottom="20dp"
+                android:text="Loading..."/>
 
         </LinearLayout>
 
