--- a/app/src/main/res/layout/item_time_workout.xml
+++ b/app/src/main/res/layout/item_time_workout.xml
@@ -33,6 +33,7 @@
         android:text="Total Time: "
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:textStyle="bold"/>
 
 </LinearLayout>
