--- a/app/src/main/res/layout/help_fragment.xml
+++ b/app/src/main/res/layout/help_fragment.xml
@@ -11,21 +11,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Back Button -->
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/back_button"
-            android:onClick="btnBackClicked"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:padding="16dp"/>
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,21 +31,20 @@
                 android:layout_marginBottom="30dp"
                 android:textColor="@color/proactive_red"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="Loading..."/>
 
         </LinearLayout>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
 
         <TextView
             android:id="@+id/HelpTitle"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:padding="10dp"
+            android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Sample Text"/>
+            android:text="Sample Text"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginBottom="8dp"/>
 
         <TextView
             android:id="@+id/HelpContent"
