--- a/app/src/main/res/layout/view_exercises_fragment.xml
+++ b/app/src/main/res/layout/view_exercises_fragment.xml
@@ -31,6 +31,13 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/btnHelp"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:text="Help"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
 
         <LinearLayout
