--- a/app/src/main/res/layout/progress_graphs_fragment.xml
+++ b/app/src/main/res/layout/progress_graphs_fragment.xml
@@ -69,7 +69,7 @@
             android:id="@+id/btnSelectDateRange"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="16dp"
+            android:layout_marginVertical="16dp"
             android:background="@drawable/button"
             android:onClick="showDateRangePickerDialog"
             android:text="@string/select_date_range"
@@ -80,7 +80,8 @@
             android:layout_height="match_parent"
             android:background="@drawable/workout_card_background"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="20dp"
+            android:layout_marginBottom="16dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -214,6 +215,75 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_marginTop="16dp" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/workout_card_background"
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:layout_marginBottom="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:text="Monthly Progress Chart"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textColor="@android:color/white"
+                    android:layout_marginBottom="10dp"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                    <ImageButton
+                        android:id="@+id/btnPreviousMonth"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/previous_month_icon"
+                        android:background="@drawable/button_transparent"
+                        android:onClick="btnPreviousMonth_Clicked" />
+
+
+                    <TextView
+                        android:id="@+id/monthTitle"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:text="..."
+                        android:textSize="16sp"
+                        android:textColor="@android:color/white"
+                        android:layout_marginBottom="10dp"
+                        android:textAlignment="center"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="10dp" />
+
+                    <ImageButton
+                        android:id="@+id/btnNextMonth"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/next_month_icon"
+                        android:background="@drawable/button_transparent"
+                        android:onClick="btnNextMonth_Clicked"/>
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
 
 
         </LinearLayout>
